<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_oncam"
        android:padding="36dp"
        tools:context=".FToFInstructions">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/oncam_heart_pulse"
            app:layout_constraintBottom_toBottomOf="@id/icon_left"
            app:layout_constraintEnd_toStartOf="@id/heart_icon"
            app:layout_constraintStart_toEndOf="@id/icon_left"
            app:layout_constraintTop_toTopOf="@id/icon_left"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:src="@drawable/oncam_heart_pulse"
            app:layout_constraintBottom_toBottomOf="@id/heart_icon"
            app:layout_constraintEnd_toEndOf="@id/heart_icon"
            app:layout_constraintStart_toStartOf="@id/heart_icon"
            app:layout_constraintTop_toTopOf="@id/heart_icon"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/oncam_heart_pulse"
            app:layout_constraintBottom_toBottomOf="@id/icon_right"
            app:layout_constraintEnd_toStartOf="@id/icon_right"
            app:layout_constraintStart_toEndOf="@id/heart_icon"
            app:layout_constraintTop_toTopOf="@id/icon_right"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/heart_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:alpha="0.64"
            android:src="@drawable/oncam_red_heart"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/oncam_red_heart_border"
            app:layout_constraintBottom_toBottomOf="@id/heart_icon"
            app:layout_constraintEnd_toEndOf="@id/heart_icon"
            app:layout_constraintStart_toStartOf="@id/heart_icon"
            app:layout_constraintTop_toTopOf="@id/heart_icon"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/icon_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_circle"
            android:padding="8dp"
            android:src="@drawable/oncam_find_icon"
            app:layout_constraintBottom_toBottomOf="@id/heart_icon"
            app:layout_constraintEnd_toStartOf="@id/heart_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/heart_icon"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/icon_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_circle"
            android:padding="12dp"
            android:src="@drawable/oncam_found_icon"
            app:layout_constraintBottom_toBottomOf="@id/heart_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/heart_icon"
            app:layout_constraintTop_toTopOf="@id/heart_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/face_to_face"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/instructions" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_medium"
            android:gravity="center"
            android:text="@string/instructions"
            android:textColor="@color/white300"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/SP18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructions" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>